<?xml version="1.0"?>
<package format="3">
  <name>mrta_core</name>
  <version>0.1.0</version>
  <description>MRTA core</description>

  <maintainer email="temp@example.com">temp</maintainer>
  <license>jmk9</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
